# 6PoseEstimation

./: CMakeLists.txt  README.md  main.cpp
inc/: Descriptor.h  Kalman.h  Pose.h  Visualizer.h
src/: Descriptor.cpp  Kalman.cpp  Pose.cpp  Visualizer.cpp
